# memory_reader

./: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
lib/: CMakeLists.txt
lib/src/: CMakeLists.txt  processmanager.cpp  processmanager.h  test.cpp
lib/test/: CMakeLists.txt  test_process_manager.cpp
