cmake_minimum_required(VERSION 3.5)

project(MemoryReader VERSION 0.1 LANGUAGES CXX)

set(CMAKE_INCLUDE_CURRENT_DIR ON)

set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)


find_package(QT NAMES Qt6 Qt5 COMPONENTS Widgets REQUIRED)
find_package(Qt${QT_VERSION_MAJOR} COMPONENTS Widgets REQUIRED)

set(PROJECT_SOURCES
        main.cpp
        mainwindow.cpp
        mainwindow.h
        mainwindow.ui
)
qt_add_executable(HUD
    MANUAL_FINALIZATION
    ${PROJECT_SOURCES}
)

add_subdirectory(lib)

link_directories(${CMAKE_CURRENT_SOURCE_DIR}/lib/build/src)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/lib/src)

target_link_libraries(HUD PRIVATE Qt${QT_VERSION_MAJOR}::Widgets process_manager)

if(QT_VERSION_MAJOR EQUAL 6)
    qt_finalize_executable(HUD)
endif()
